# CPDJ101_WebServer

./: .gitignore  README.md  chat.html  index.js  main.html  served_check.html  start.html  style.css
chat/: CLOUDFLARE_TUNNEL.md  pyproject.toml
chat/src/chat/: __init__.py
chat/src/chat/templates/: index.html
