[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "quart (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{include = "chat", from = "src"}]

[tool.poetry.scripts]
start = "chat:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
